Частично реализовано обновление меропритий
- Карта пока не работает.
- Поля загрузки пока не работают.

--- a/Frontend/html/edit-event-page.html
+++ b/Frontend/html/edit-event-page.html
@@ -133,7 +133,8 @@
                     <input type="text" title="E-mail" name="organizer-email" id="org-email" placeholder="E-mail">
                 </section>
                 <div class="save-butts">
-                    <button type="button" class="create-butt" name="create" id="create">Сохранить</button>
+                    <button type="button" class="create-butt visually-hidden" name="create" id="create">Создать</button>
+                    <button type="button" class="create-butt" name="edit" id="edit">Сохранить</button>
                 </div>
             </form>
         </div>
@@ -146,9 +147,9 @@
     <script type="module" src="../js/event-page-add-clubs.js"></script>
 
     <script type="module" src="../js/add-event-schedule-script.js"></script>
-    <script type="module" src="../js/add-event-page-script.js"></script>
+    <script type="module" src="../js/send-event-info-script.js"></script>
 
-    <script type="module" src="../js/edit-event-page-script.js"></script>
+    <script type="module" src="../js/get-event-info-script.js"></script>
     </body>
 </html>
 
