--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -131,6 +131,7 @@
                 </section>
                 <div class="save-butts">
                     <button type="button" class="create-butt" name="create" id="create">Создать</button>
+                    <button type="button" class="create-butt visually-hidden" name="edit" id="edit">Сохранить</button>
                 </div>
             </form>
         </div>
@@ -143,7 +144,7 @@
     <script type="module" src="../js/event-page-add-clubs.js"></script>
 
     <script type="module" src="../js/add-event-schedule-script.js"></script>
-    <script type="module" src="../js/add-event-page-script.js"></script>
+    <script type="module" src="../js/send-event-info-script.js"></script>
     </body>
 </html>
 
