Улучшена служебная страница

--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -18,19 +18,19 @@
                             <table>
                                 <tr>
                                     <td style="width: 5%;"><b> Регион</b></td>
-                                    <td class="bordered-3" style="width: 15%;" id="region">Свердловская область</td>
+                                    <td class="bordered-3" style="width: 15%;" id="region"></td>
                                 </tr>
                                 <tr>
                                     <td><b> Город</b></td>
-                                    <td class="bordered-3" id="city">Екатеринбург</td>
+                                    <td class="bordered-3" id="city"></td>
                                 </tr>
                                 <tr>
                                     <td><b>Клуб</b></td>
-                                    <td class="bordered-3" id="club">Прайм</td>
+                                    <td class="bordered-3" id="club"></td>
                                 </tr>
                                 <tr>
                                     <td><b> Количество учеников</b></td>
-                                    <td class="bordered-3" id="stud-count">35</td>
+                                    <td class="bordered-3" id="stud-count"></td>
                                 </tr>
                             </table>
                         </div>
