--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -47,7 +47,7 @@
                         Предстоящие семинары
                     </p>
                 </div>
-                <div class="bordered upcom_sem">
+                <div class="bordered upcom_sem scroll">
                     <table>
                         <tr id="coming-activities-header">
                             <th style="width: 180px;">Дата</th>
@@ -66,7 +66,7 @@
                         Прошедшие семинары
                     </div>
                 </div>
-                <div class="bordered past_sem">
+                <div class="bordered past_sem scroll">
                     <table>
                         <tr id="preview-activities-header">
                             <th style="width: 180px;">Дата</th>
@@ -84,7 +84,7 @@
                         Список учеников
                     </div>
                 </div>
-                <div class="bordered list_stud">
+                <div class="bordered list_stud scroll">
                     <table id="students">
                         <tr id="default-row">
                            <td id="default_value"></td>
