--- a/Frontend/html/edit-event-page.html
+++ b/Frontend/html/edit-event-page.html
@@ -147,9 +147,10 @@
     <script type="module" src="../js/event-page-add-clubs.js"></script>
 
     <script type="module" src="../js/add-event-schedule-script.js"></script>
-    <script type="module" src="../js/send-event-info-script.js"></script>
+    <!--<script type="module" src="../js/send-event-info-script.js"></script>-->
 
     <script type="module" src="../js/get-event-info-script.js"></script>
+    <script type="module" src="../js/update-event-script.js"></script>
     </body>
 </html>
 
