Проверка статуса ответа

--- a/Frontend/html/edit-event-page.html
+++ b/Frontend/html/edit-event-page.html
@@ -19,6 +19,7 @@
                 <div class="edit-btns">
                     <button type="button" class="download-list-btn" name="" id="">Скачать список участников</button>
                     <button type="button" class="upload-list-btn" name="" id="">Загрузить отчёт</button>
+                    <input type="file" id="input-report" placeholder="Загрузить отчёт">
                 </div>
                 <section>
                     <div class="event-title">
