--- a/Frontend/html/seminar_statistic.html
+++ b/Frontend/html/seminar_statistic.html
@@ -71,6 +71,6 @@
 </body>
 <script src="../js/seminar-statistic-toogle-table.js"></script>
 <script src="../js/get-seminar-base-info.js"></script>
-<script src="../js/download-file.js"></script>
-<script src="../js/upload-file.js"></script>
+<script src="../js/download-report.js"></script>
+<script src="../js/upload-report.js"></script>
 </html>
