--- a/Frontend/html/edit-event-page.html
+++ b/Frontend/html/edit-event-page.html
@@ -9,6 +9,7 @@
         <title>Информация о мероприятии</title>
         <link rel="stylesheet" href="../css/menu-style.css">
         <link rel="stylesheet" href="../css/add-event-style.css">
+        <link rel="stylesheet" href="../css/edit-event-page-style.css">
     </head>
     <body>
     <div class="content"></div>
@@ -16,11 +17,15 @@
         <div class="page-body__container">
             <form action="#" method="post">
                 <h1>Информация о мероприятии</h1>
-                <div class="edit-btns">
-                    <button type="button" class="download-list-btn" name="" id="">Скачать список участников</button>
-                    <button type="button" class="upload-list-btn" name="" id="">Загрузить отчёт</button>
-                    <input type="file" id="input-report" placeholder="Загрузить отчёт">
+
+                <div class="row edit-btns" id="buttons-block">
+                    <a class="download col-6 col-md-6 col-lg-6" id="download">Скачать список участников</a>
+                    <input type="file" class="input-file" id="upload">
+                    <label for="upload" class="form-control-file upload col-6 col-md-6 col-lg-6">
+                        <span>Загрузить список участников</span>
+                    </label>
                 </div>
+
                 <section>
                     <div class="event-title">
                         <label class="visually-hidden" for="event-name">Название мероприятия</label>
@@ -148,10 +153,12 @@
     <script type="module" src="../js/event-page-add-clubs.js"></script>
 
     <script type="module" src="../js/add-event-schedule-script.js"></script>
-    <!--<script type="module" src="../js/send-event-info-script.js"></script>-->
 
     <script type="module" src="../js/get-event-info-script.js"></script>
     <script type="module" src="../js/update-event-script.js"></script>
+
+    <script type="module" src="../js/download-report.js"></script>
+    <script type="module" src="../js/upload-report.js"></script>
     </body>
 </html>
 
