--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -20,17 +20,17 @@
                 <section>
                     <div class="event-title">
                         <label class="visually-hidden" for="event-name">Название мероприятия</label>
-                        <input type="text" title="Название мероприятия" name="event-name" id="event-name" placeholder="Название мероприятия">
+                        <input type="text" title="Название мероприятия" name="event-name" id="event-name" placeholder="Название мероприятия" autocomplete="off">
                     </div>
                     <div class="event-dates">
                         <label class="visually-hidden" for="date-start">Дата начала</label>
-                        <input type="date" class="date" title="Дата начала" name="date-start" id="date-start" placeholder="Дата начала">
+                        <input type="date" class="date" title="Дата начала" name="date-start" id="date-start" placeholder="Дата начала" autocomplete="off">
                         <label class="visually-hidden" for="date-end">Дата окончания</label>
-                        <input type="date" class="date" title="Дата окончания" name="date-end" id="date-end" placeholder="Дата окончания">
+                        <input type="date" class="date" title="Дата окончания" name="date-end" id="date-end" placeholder="Дата окончания" autocomplete="off">
                     </div>
                     <div class="event-address">
                         <label class="visually-hidden" for="event-location">Адрес проведения</label>
-                        <input type="text" class="event-location" title="Адрес проведения" name="event-location" id="event-location" placeholder="Адрес проведения">
+                        <input type="text" class="event-location" title="Адрес проведения" name="event-location" id="event-location" placeholder="Адрес проведения" autocomplete="off">
                     </div>
                     <div class="map" id="map">
                     </div>
@@ -41,7 +41,7 @@
                     </select>
                     <div class="coach-and-rank">
                         <label class="visually-hidden" for="lead-coach">ФИО ведущего тренера</label>
-                        <input type="text" class="lead-coach" title="ФИО ведущего тренера" name="lead-coach" id="lead-coach" placeholder="ФИО ведущего тренера">
+                        <input type="text" class="lead-coach" title="ФИО ведущего тренера" name="lead-coach" id="lead-coach" placeholder="ФИО ведущего тренера" autocomplete="off">
                         <label class="visually-hidden" for="max-rang-select">Макс. ранг</label>
                         <select class="max-rang" title="Максимальный ранг" name="max-rang" id="max-rang-select">
                             <option value="">-- Макс. ранг --</option>
@@ -123,11 +123,11 @@
                 <section>
                     <h2>Контакты организатора</h2>
                     <label class="visually-hidden"  for="org-name">ФИО организатора</label>
-                    <input type="text" title="ФИО организатора" name="organizer-name" id="org-name" placeholder="ФИО организатора">
+                    <input type="text" title="ФИО организатора" name="organizer-name" id="org-name" placeholder="ФИО организатора" autocomplete="off">
                     <label class="visually-hidden"  for="org-phone">Телефон</label>
-                    <input type="text" title="Телефон" name="organizer-phone" id="org-phone" placeholder="Телефон">
+                    <input type="text" title="Телефон" name="organizer-phone" id="org-phone" placeholder="Телефон" autocomplete="off">
                     <label class="visually-hidden" for="org-email">E-mail</label>
-                    <input type="text" title="E-mail" name="organizer-email" id="org-email" placeholder="E-mail">
+                    <input type="text" title="E-mail" name="organizer-email" id="org-email" placeholder="E-mail" autocomplete="off">
                 </section>
                 <div class="save-butts">
                     <button type="button" class="create-butt" name="create" id="create">Создать</button>
