Фикс отправки тренерской заявки

--- a/Frontend/html/create_aplication.html
+++ b/Frontend/html/create_aplication.html
@@ -11,41 +11,7 @@
 </head>
 <body>
 <div class="wrapper">
-  <div class="menu">
-          <a href="#" class="menu-btn"></a>
-          <nav class="container menu-list">
-            <div class="btn">
-                <div class="description"><a href="profile.html" class="text-a">Мой профиль</a></div>
-                <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Семинары</a></div>
-                <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Статьи</a></div>
-                <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
-            </div>
-            <div class="btn">
-                <div class="description"><a href="#" class="text-a">Контакты</a></div>
-                <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
-            </div>
-            <div class="btn" id="trainer-button">
-                <div class="description"><a href="service_page.html" class="text-a">Служебная</a></div>
-                <div class="icon"><a href="service_page.html"><img src="../assets/service.png"></a></div>
-            </div>
-            <div class="btn" id="admin-button">
-                <div class="description"><a href="admin-page-main.html" class="text-a">Админка</a></div>
-                <div class="icon"><a href="admin-page-main.html"><img src="../assets/admin-icon.png"></a></div>
-            </div>
-            <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
-            <div class="exit-btn">
-                <div class="description"><a href="authorization.html" class="text-a">Выйти</a></div>
-                <div class="icon"><a href="authorization.html"><img src="../assets/exit-icon.png"></a></div>
-            </div>
-          </nav>
-        </div>
-
+<!--    menu insertin here by js-->
   <div class="container content">
     <!-- here js will insert activity's base info block (name, date, etc)-->
 
@@ -113,7 +79,9 @@
 
 </div>
 </body>
-<script src = "../js/navbar-swipe.js"></script>
+<script src="../js/menu-inserting.js"></script>
+<script src="../js/getRequest.js"></script>
+<script src = "../js/postWithoutAnswer.js"></script>
 <script src="../js/get-seminar-base-info.js"></script>
 <script src="../js/get-event-member-info.js"></script>
 <script src="../js/insert-new-members.js"></script>
